<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">STcan</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="setting">設定</string>
    <string name="menu_setting">設定</string>
    <string name="unknown">Unknown</string>
    <string name="setting_pqrst">心拍波形</string>
    <string name="setting_rri">心拍間隔</string>
    <string name="setting_acceleration_average">移動平均</string>
    <string name="setting_acceleration_peak">ピークホールド</string>
    <string name="setting_dialog_behavior">動作モードの選択</string>
    <string name="setting_dialog_acceleration">加速度モードの選択</string>
    <string name="setting_behavior">動作モード</string>
    <string name="setting_acceleration">加速度モード</string>
    <string name="label_pqrst">心拍波形</string>
    <string name="label_rri">心拍間隔</string>
    <string name="label_temperature">体表温</string>
    <string name="label_acceleration">加速度</string>
    <string name="label_shtpnn50">pNN50 of last 30 seconds</string>
    <string name="label_lngpnn50">pNN50 of last 10 minutes</string>
    <string name="title_activity_ready">ReadyActivity</string>
    <string name="action_settings">Settings</string>
    <string name="ready_start">計測開始</string>
    <string name="ready_setting">設定</string>
    <string name="ready_finish">終了</string>
    <string name="ready_check">取得値確認</string>
    <string name="control_finish">計測終了</string>
    <string name="title_activity_check">CheckActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="ready_test">実験</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="test_hot">暑熱環境</string>
    <string name="test_comfortable">快適環境</string>
    <string name="test_cold">寒冷環境</string>
    <string name="test_back">戻る</string>
    <string name="title_activity_hot">HotActivity</string>
    <string name="title_activity_comfortable">ComfortableActivity</string>
    <string name="title_activity_cold">ColdActivity</string>

</resources>
